--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,14 @@
                     android:padding="@dimen/header_nav_padding">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/main_image_view"
+                        android:id="@+id/main_header_back_btn_iv"
                         android:layout_width="@dimen/header_nav_btn_size"
                         android:layout_height="@dimen/header_nav_btn_size"
-                        android:layout_marginStart="@dimen/header_nav_btn_margin"
-                        android:layout_marginTop="@dimen/header_nav_btn_margin"
+                        android:layout_marginStart="@dimen/header_nav_btn_margin_horizontal"
+                        android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                        android:clickable="true"
+                        android:contentDescription="@string/back"
+                        android:foreground="?selectableItemBackground"
                         android:src="@drawable/computer"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -45,14 +48,28 @@
                         android:id="@+id/main_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
                         android:text="@string/welcome_xx"
                         android:textColor="@color/white"
                         android:textSize="@dimen/header_nav_label_textSize"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/main_image_view"
-                        app:layout_constraintTop_toTopOf="@id/main_image_view" />
+                        app:layout_constraintBottom_toBottomOf="@id/main_header_back_btn_iv"
+                        app:layout_constraintEnd_toStartOf="@id/main_header_edit_btn_iv"
+                        app:layout_constraintStart_toEndOf="@id/main_header_back_btn_iv"
+                        app:layout_constraintTop_toTopOf="@id/main_header_back_btn_iv" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/main_header_edit_btn_iv"
+                        android:layout_width="@dimen/header_nav_btn_size"
+                        android:layout_height="@dimen/header_nav_btn_size"
+                        android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                        android:layout_marginEnd="@dimen/header_nav_btn_margin_horizontal"
+                        android:visibility="invisible"
+                        android:clickable="true"
+                        android:contentDescription="@string/back"
+                        android:foreground="?selectableItemBackground"
+                        android:src="@drawable/common_edit_note_src"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
