--- a/app/src/main/res/layout/activity_quiz_details.xml
+++ b/app/src/main/res/layout/activity_quiz_details.xml
@@ -32,8 +32,8 @@
                     android:id="@+id/quiz_d_header_back_btn_iv"
                     android:layout_width="@dimen/header_nav_btn_size"
                     android:layout_height="@dimen/header_nav_btn_size"
-                    android:layout_marginStart="@dimen/header_nav_btn_margin"
-                    android:layout_marginTop="@dimen/header_nav_btn_margin"
+                    android:layout_marginStart="@dimen/header_nav_btn_margin_horizontal"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
                     android:clickable="true"
                     android:contentDescription="@string/back"
                     android:foreground="?selectableItemBackground"
@@ -45,14 +45,28 @@
                     android:id="@+id/quiz_d_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
                     android:text="@string/test_details"
                     android:textColor="@color/white"
                     android:textSize="@dimen/header_nav_label_textSize"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/quiz_d_header_back_btn_iv"
+                    app:layout_constraintEnd_toStartOf="@id/quiz_d_header_edit_btn_iv"
                     app:layout_constraintStart_toEndOf="@id/quiz_d_header_back_btn_iv"
                     app:layout_constraintTop_toTopOf="@id/quiz_d_header_back_btn_iv" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/quiz_d_header_edit_btn_iv"
+                    android:layout_width="@dimen/header_nav_btn_size"
+                    android:layout_height="@dimen/header_nav_btn_size"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                    android:layout_marginEnd="@dimen/header_nav_btn_margin_horizontal"
+                    android:visibility="invisible"
+                    android:clickable="true"
+                    android:contentDescription="@string/back"
+                    android:foreground="?selectableItemBackground"
+                    android:src="@drawable/common_edit_note_src"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
