--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,8 +33,8 @@
                     android:id="@+id/settings_header_back_btn_iv"
                     android:layout_width="@dimen/header_nav_btn_size"
                     android:layout_height="@dimen/header_nav_btn_size"
-                    android:layout_marginStart="@dimen/header_nav_btn_margin"
-                    android:layout_marginTop="@dimen/header_nav_btn_margin"
+                    android:layout_marginStart="@dimen/header_nav_btn_margin_horizontal"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
                     android:clickable="true"
                     android:contentDescription="@string/back"
                     android:foreground="?selectableItemBackground"
@@ -46,14 +46,28 @@
                     android:id="@+id/settings_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
                     android:text="@string/settings"
                     android:textColor="@color/white"
                     android:textSize="@dimen/header_nav_label_textSize"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/settings_header_back_btn_iv"
+                    app:layout_constraintEnd_toStartOf="@id/settings_header_edit_btn_iv"
                     app:layout_constraintStart_toEndOf="@id/settings_header_back_btn_iv"
                     app:layout_constraintTop_toTopOf="@id/settings_header_back_btn_iv" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/settings_header_edit_btn_iv"
+                    android:layout_width="@dimen/header_nav_btn_size"
+                    android:layout_height="@dimen/header_nav_btn_size"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                    android:layout_marginEnd="@dimen/header_nav_btn_margin_horizontal"
+                    android:clickable="true"
+                    android:contentDescription="@string/back"
+                    android:foreground="?selectableItemBackground"
+                    android:src="@drawable/common_edit_note_src"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,65 +83,112 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/settings_layout_header">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/settings_card_view_logout"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/common__space_size"
-                android:layout_marginBottom="8dp"
-                android:clickable="true"
-                android:foreground="?selectableItemBackground"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp">
+                android:layout_marginBottom="@dimen/fragment__space_size"
+                android:orientation="vertical">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/main_rv_padding">
+                    android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
+                    android:text="@string/appearance"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/common__text_h2"
+                    android:textStyle="bold" />
 
-                    <ImageView
-                        android:id="@+id/topic_d_quizzes_rv_image_view"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:background="@color/light_gray"
-                        android:contentDescription="@string/log_out"
-                        android:padding="2dp"
-                        android:src="@drawable/settings_logout_src"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/settings_card_view_theme"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/common__space_size"
+                    android:layout_marginBottom="8dp"
+                    android:clickable="true"
+                    android:foreground="?selectableItemBackground"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp">
 
-                    <TextView
-                        android:id="@+id/topic_d_quizzes_rv_tv_title"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="2sp"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@string/log_out"
-                        android:textColor="@color/dark_blue"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/topic_d_quizzes_rv_right_arrow"
-                        app:layout_constraintStart_toEndOf="@id/topic_d_quizzes_rv_image_view"
-                        app:layout_constraintTop_toTopOf="parent" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/settings_layout_height"
+                        android:padding="@dimen/settings_cv_padding">
 
-                    <ImageView
-                        android:id="@+id/topic_d_quizzes_rv_right_arrow"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:contentDescription="@string/quiz"
-                        android:padding="2dp"
-                        android:src="@drawable/main_rv_arrow_src"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        <com.google.android.material.switchmaterial.SwitchMaterial
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/dark_theme_no_work"
+                            android:textSize="14sp" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/fragment__space_size"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
+                    android:text="@string/account"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/common__text_h2"
+                    android:textStyle="bold" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/settings_card_view_logout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/common__space_size"
+                    android:layout_marginBottom="8dp"
+                    android:clickable="true"
+                    android:foreground="?selectableItemBackground"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/settings_layout_height"
+                        android:padding="@dimen/settings_cv_padding">
+
+                        <ImageView
+                            android:id="@+id/settings_quizzes_rv_image_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:background="@color/light_gray"
+                            android:contentDescription="@string/log_out"
+                            android:padding="2dp"
+                            android:src="@drawable/settings_logout_src"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/settings_quizzes_rv_tv_title"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/settings_cv_padding"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="@string/log_out"
+                            android:textColor="@color/black"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/settings_quizzes_rv_image_view"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
