--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.topic.link.LinkViewActivity">
+    tools:context=".ui.stats.StatsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/link_view_layout_header"
+            android:id="@+id/stats_layout_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/dark_blue"
@@ -30,7 +30,7 @@
                 android:padding="@dimen/header_nav_padding">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/link_view_header_back_btn_iv"
+                    android:id="@+id/stats_header_back_btn_iv"
                     android:layout_width="@dimen/header_nav_btn_size"
                     android:layout_height="@dimen/header_nav_btn_size"
                     android:layout_marginStart="@dimen/header_nav_btn_margin_horizontal"
@@ -43,23 +43,24 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/link_view_label"
+                    android:id="@+id/stats_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/link_preview"
+                    android:text="@string/stats"
                     android:textColor="@color/white"
                     android:textSize="@dimen/header_nav_label_textSize"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@id/link_view_header_back_btn_iv"
-                    app:layout_constraintEnd_toStartOf="@id/link_view_header_edit_btn_iv"
-                    app:layout_constraintStart_toEndOf="@id/link_view_header_back_btn_iv"
-                    app:layout_constraintTop_toTopOf="@id/link_view_header_back_btn_iv" />
+                    app:layout_constraintBottom_toBottomOf="@id/stats_header_back_btn_iv"
+                    app:layout_constraintEnd_toStartOf="@id/stats_header_edit_btn_iv"
+                    app:layout_constraintStart_toEndOf="@id/stats_header_back_btn_iv"
+                    app:layout_constraintTop_toTopOf="@id/stats_header_back_btn_iv" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/link_view_header_edit_btn_iv"
+                    android:id="@+id/stats_header_edit_btn_iv"
                     android:layout_width="@dimen/header_nav_btn_size"
                     android:layout_height="@dimen/header_nav_btn_size"
                     android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                    android:visibility="invisible"
                     android:layout_marginEnd="@dimen/header_nav_btn_margin_horizontal"
                     android:clickable="true"
                     android:contentDescription="@string/back"
@@ -70,55 +71,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/header_nav_padding"
-                android:paddingHorizontal="@dimen/common__space_size"
-                android:paddingBottom="@dimen/common__space_size">
-
-                <TextView
-                    android:id="@+id/link_view_tv_header_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="marquee"
-                    android:maxLines="1"
-                    android:text="@string/example_name"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/common__text_h3"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/link_view_tv_header_desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="@string/example_name"
-                    android:textAlignment="center"
-                    android:textColor="@color/darker_grey"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/link_view_tv_header_name" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
         </LinearLayout>
-
-        <WebView
-            android:id="@+id/link_view_web_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:backgroundTint="@color/light_gray"
-            android:paddingVertical="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/link_view_layout_header" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
