--- a/app/src/main/res/layout/activity_topic_details.xml
+++ b/app/src/main/res/layout/activity_topic_details.xml
@@ -18,11 +18,11 @@
             android:id="@+id/topic_details_layout_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/dark_blue"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/dark_blue"
-            android:orientation="vertical">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -33,8 +33,8 @@
                     android:id="@+id/topic_details_header_back_btn_iv"
                     android:layout_width="@dimen/header_nav_btn_size"
                     android:layout_height="@dimen/header_nav_btn_size"
-                    android:layout_marginStart="@dimen/header_nav_btn_margin"
-                    android:layout_marginTop="@dimen/header_nav_btn_margin"
+                    android:layout_marginStart="@dimen/header_nav_btn_margin_horizontal"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
                     android:clickable="true"
                     android:contentDescription="@string/back"
                     android:foreground="?selectableItemBackground"
@@ -46,17 +46,29 @@
                     android:id="@+id/topic_details_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
                     android:text="@string/topic_details"
                     android:textColor="@color/white"
                     android:textSize="@dimen/header_nav_label_textSize"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/topic_details_header_back_btn_iv"
+                    app:layout_constraintEnd_toStartOf="@id/topic_details_header_edit_btn_iv"
                     app:layout_constraintStart_toEndOf="@id/topic_details_header_back_btn_iv"
                     app:layout_constraintTop_toTopOf="@id/topic_details_header_back_btn_iv" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/topic_details_header_edit_btn_iv"
+                    android:layout_width="@dimen/header_nav_btn_size"
+                    android:layout_height="@dimen/header_nav_btn_size"
+                    android:layout_marginTop="@dimen/header_nav_btn_margin_top"
+                    android:layout_marginEnd="@dimen/header_nav_btn_margin_horizontal"
+                    android:clickable="true"
+                    android:contentDescription="@string/back"
+                    android:foreground="?selectableItemBackground"
+                    android:src="@drawable/common_edit_note_src"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
