--- a/app/src/main/res/layout/fragment_codes.xml
+++ b/app/src/main/res/layout/fragment_codes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.topic.fragment.CodesFragment">
+    tools:context=".ui.topic.fragment.QuizzesFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,14 +12,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/bottom_nav_height">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fragment__space_size"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/bottom_nav_height">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -31,7 +30,7 @@
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/fragment_codes_section_rv"
+                    android:id="@+id/fragment_codes_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
