--- a/app/src/main/res/layout/fragment_quizzes.xml
+++ b/app/src/main/res/layout/fragment_quizzes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,19 +12,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/bottom_nav_height">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/common__space_size">
+                android:paddingBottom="@dimen/common_tv_section_margin_bottom">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
                     android:text="@string/tests"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/common__text_h2"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fragment_quizzes_rv_new"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/bottom_nav_height">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
+                    android:text="@string/last_added_by_you"
                     android:textColor="@color/dark_blue"
                     android:textSize="@dimen/common__text_h2"
                     android:textStyle="bold" />
@@ -32,36 +54,11 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/fragment_quizzes_rv"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/common__space_size" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/fragment_quizzes_new_quiz_linear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/common__space_size">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/last_added_by_you"
-                    android:textColor="@color/dark_blue"
-                    android:textSize="@dimen/common__text_h2"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/fragment_quizzes_new_quiz_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/common__space_size" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
-
-</ScrollView>
+</FrameLayout>
