--- a/app/src/main/res/layout/topic_d_slides_vp_item.xml
+++ b/app/src/main/res/layout/topic_d_slides_vp_item.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:layout_marginHorizontal="4dp">
 
     <ImageView
         android:id="@+id/topic_d_slides_rv_image_view"
         android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:contentDescription="@string/slide" />
 
