--- a/app/src/main/res/layout/activity_topic_coordinator.xml
+++ b/app/src/main/res/layout/activity_topic_coordinator.xml
@@ -16,9 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.JavaProApp.PopupOverlay" >
-
-        </androidx.appcompat.widget.Toolbar>
+            app:popupTheme="@style/Theme.JavaProApp.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
