--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.topic.link.LinkActivity">
 
-    <include
-        android:id="@+id/link_include"
-        layout="@layout/activity_link_coordinator"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/link_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.JavaProApp.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/link_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.JavaProApp.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/link_linear_header"
@@ -22,7 +34,7 @@
         android:paddingBottom="@dimen/common_container_spacing_v"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/link_include">
+        app:layout_constraintTop_toBottomOf="@id/link_app_bar">
 
         <TextView
             android:id="@+id/link_tv_header_name"
