--- a/app/src/main/res/layout/activity_main_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_drawer_header.xml
@@ -17,7 +17,7 @@
         android:adjustViewBounds="true"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/label_nav_header"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/computer" />
 
     <TextView
@@ -30,7 +30,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/main_d_h_tv_email"
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:layout_height="wrap_content"
