--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,11 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.topic.quiz.question.QuestionActivity">
 
-    <include
-        android:id="@+id/question_include"
-        layout="@layout/activity_question_coordinator"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/question_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.JavaProApp.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/question_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.JavaProApp.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/question_linear_header"
@@ -23,7 +35,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question_include">
+        app:layout_constraintTop_toBottomOf="@id/question_app_bar">
 
     </LinearLayout>
 
@@ -31,9 +43,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/question_linear_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/question_linear_btn"
         app:layout_constraintTop_toBottomOf="@id/question_linear_header">
 
         <LinearLayout
@@ -46,10 +58,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:visibility="invisible"
                 android:paddingHorizontal="@dimen/common_container_spacing_h"
                 android:paddingVertical="@dimen/common_container_spacing_v">
 
                 <TextView
+                    android:id="@+id/question_tv_question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/common_tv_section_head_spacing_v"
@@ -61,7 +75,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:maxHeight="300dp"
+                    android:minHeight="@dimen/common_iv_max_height"
+                    android:maxHeight="@dimen/common_iv_max_height"
                     android:src="@drawable/tests" />
 
                 <LinearLayout
@@ -72,6 +87,7 @@
                     android:paddingVertical="@dimen/question_checkbox_spacing_v">
 
                     <CheckBox
+                        android:id="@+id/question_chb_a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
@@ -84,6 +100,7 @@
                         android:text="@string/example_ans" />
 
                     <CheckBox
+                        android:id="@+id/question_chb_b"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
@@ -96,6 +113,7 @@
                         android:text="@string/example_ans" />
 
                     <CheckBox
+                        android:id="@+id/question_chb_c"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
@@ -108,6 +126,7 @@
                         android:text="@string/example_ans" />
 
                     <CheckBox
+                        android:id="@+id/question_chb_d"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
@@ -118,6 +137,80 @@
                         android:foreground="?selectableItemBackground"
                         android:maxLines="1"
                         android:text="@string/example_ans" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/question_linear_end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingHorizontal="@dimen/common_container_spacing_h"
+                android:paddingVertical="@dimen/common_container_spacing_v"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/question_tv_end_head"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/common_tv_section_head_spacing_v"
+                    android:text="@string/label_congratulation"
+                    android:textAlignment="center"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/question_iv_trophy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:minHeight="@dimen/common_iv_max_height"
+                    android:maxHeight="@dimen/common_iv_max_height"
+                    android:src="@drawable/trophy" />
+
+                <LinearLayout
+                    android:id="@+id/question_linear_counters_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingVertical="10dp">
+
+                    <TextView
+                        android:id="@+id/question_tv_end_correct_que"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="8dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/teal_green"
+                        android:textSize="@dimen/common__text_h2"
+                        android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
+                        android:text="@string/label_correct_que" />
+
+                    <TextView
+                        android:id="@+id/question_tv_end_fail_que"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="8dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/red"
+                        android:textSize="@dimen/common__text_h2"
+                        android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
+                        android:text="@string/label_fail_que" />
+
+                    <TextView
+                        android:id="@+id/question_tv_end_all_que"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="4dp"
+                        android:paddingVertical="8dp"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/common__text_h2"
+                        android:layout_marginVertical="@dimen/question_checkbox_spacing_v"
+                        android:text="@string/label_all_que" />
 
                 </LinearLayout>
 
