--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -7,11 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.topic.TopicActivity">
 
-    <include
-        android:id="@+id/topic_include"
-        layout="@layout/activity_topic_coordinator"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/topic_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.JavaProApp.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/topic_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.JavaProApp.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/topic_linear_header"
@@ -20,10 +32,10 @@
         android:background="?colorPrimary"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/common_container_spacing_h"
-        android:paddingBottom="@dimen/common_container_spacing_v"
+        android:paddingVertical="@dimen/common_container_spacing_v"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topic_include">
+        app:layout_constraintTop_toBottomOf="@id/topic_app_bar">
 
         <TextView
             android:id="@+id/topic_tv_header_name"
