--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -69,6 +69,7 @@
                             android:textColor="?colorPrimary" />
 
                         <TextView
+                            android:id="@+id/stats_tv_topics_add"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1" />
