--- a/app/src/main/res/layout/fragment_creator_code.xml
+++ b/app/src/main/res/layout/fragment_creator_code.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimary"
-    tools:context=".ui.creator.fragment.CreatorSlideFragment">
+    tools:context=".ui.creator.fragment.CreatorCodeFragment">
+
+    <TextView
+        android:id="@+id/creator_code_tv_page_headline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_container_spacing_v"
+        android:text="@string/label_codes"
+        android:textAlignment="center"
+        android:textColor="?colorOnPrimary"
+        android:textSize="@dimen/common__text_h2"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/creator_code_scrollview_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:maxHeight="@dimen/common_dialog_max_height"
         android:paddingHorizontal="@dimen/common_container_spacing_h"
-        android:paddingVertical="@dimen/common_container_spacing_v">
+        android:paddingVertical="@dimen/common_container_spacing_v"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/creator_code_tv_page_headline">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +47,7 @@
                     android:id="@+id/creator_code_linear_name_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/wizard_linear_margin_top"
+                    android:layout_marginTop="@dimen/creator_linear_margin_top"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/label_name"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/common__text_h3"
+                        android:textSize="@dimen/common__text_h7"
                         android:textStyle="bold" />
 
                     <EditText
@@ -86,7 +104,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/label_code"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/common__text_h3"
+                        android:textSize="@dimen/common__text_h7"
                         android:textStyle="bold" />
 
                     <EditText
@@ -119,7 +137,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/wizard_linear_margin_top"
+                    android:layout_marginTop="@dimen/creator_linear_margin_top"
                     android:orientation="vertical">
 
                     <TextView
@@ -129,81 +147,81 @@
                         android:text="@string/label_select_section"
                         android:textAlignment="center"
                         android:textColor="?colorOnPrimary"
-                        android:textSize="@dimen/common__text_h1"
+                        android:textSize="@dimen/common__text_h5"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:id="@+id/creator_code_linear_old_section_wrapper"
+                    <RadioGroup
+                        android:id="@+id/creator_code_radio_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/wizard_linear_margin_top"
-                        android:orientation="vertical"
-                        app:layout_constraintStart_toStartOf="@id/creator_code_tv"
-                        app:layout_constraintTop_toBottomOf="@id/creator_code_tv">
-
-                        <CheckBox
-                            android:id="@+id/creator_code_chb_old_section"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/label_import_section"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/common__text_h3"
-                            android:textStyle="bold" />
-
-                        <Spinner
-                            android:id="@+id/creator_code_spinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:background="@drawable/creator_input_bg"
-                            android:labelFor="@id/creator_code_chb_old_section"
-                            android:padding="@dimen/auth_input_padding"
-                            android:contentDescription="@string/label_import_section"
-                            android:textColor="?colorOnPrimary"
-                            android:textColorHint="@color/light_gray"
-                            android:textSize="18sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/creator_code_linear_new_section_wrapper"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/creator_linear_margin_top"
                         android:orientation="vertical">
 
-                        <CheckBox
-                            android:id="@+id/creator_code_chb_new_section"
+                        <RadioButton
+                            android:id="@+id/creator_code_rbtn_old_section"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:text="@string/label_import_section"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/common__text_h7"
+                            android:textStyle="bold" />
+
+                        <RadioButton
+                            android:id="@+id/creator_code_rbtn_new_section"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/label_new_section"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/common__text_h3"
+                            android:textSize="@dimen/common__text_h7"
                             android:textStyle="bold" />
 
-                        <EditText
-                            android:id="@+id/creator_code_et_new_section"
+                    </RadioGroup>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:orientation="vertical">
+
+                        <Spinner
+                            android:id="@+id/creator_code_spinner_old_section"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:background="@drawable/creator_input_bg"
-                            android:ems="10"
-                            android:autofillHints="name"
-                            android:hint="@string/example_name"
-                            android:inputType="text"
-                            android:labelFor="@id/creator_code_chb_new_section"
+                            android:contentDescription="@string/label_import_section"
+                            android:labelFor="@id/creator_code_rbtn_old_section"
                             android:padding="@dimen/auth_input_padding"
                             android:textColor="?colorOnPrimary"
                             android:textColorHint="@color/light_gray"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/creator_code_tv_new_section_info"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/field_is_required"
-                            android:textColor="@color/red"
-                            android:textSize="@dimen/wizard_tv_info_text_size"
+                        <EditText
+                            android:id="@+id/creator_code_et_new_section"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:autofillHints="name"
+                            android:background="@drawable/creator_input_bg"
+                            android:ems="10"
+                            android:hint="@string/example_name"
+                            android:inputType="text"
+                            android:labelFor="@id/creator_code_rbtn_new_section"
+                            android:padding="@dimen/auth_input_padding"
+                            android:textColor="?colorOnPrimary"
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="18sp"
                             android:visibility="gone" />
 
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/creator_code_tv_new_section_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/field_is_required"
+                        android:textColor="@color/red"
+                        android:textSize="@dimen/wizard_tv_info_text_size"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -212,4 +230,4 @@
         </LinearLayout>
     </ScrollView>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
