--- a/app/src/main/res/layout/fragment_creator_quiz.xml
+++ b/app/src/main/res/layout/fragment_creator_quiz.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimary"
-    tools:context=".ui.creator.fragment.CreatorTopicFragment">
+    tools:context=".ui.creator.fragment.CreatorQuizFragment">
 
     <TextView
-        android:id="@+id/creator_topic_tv_page_headline"
+        android:id="@+id/creator_quiz_tv_page_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/label_topic"
+        android:text="@string/label_quiz"
         android:layout_marginTop="@dimen/common_container_spacing_v"
         android:textAlignment="center"
         android:textColor="?colorOnPrimary"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/creator_topic_tv_page_headline">
+        app:layout_constraintTop_toBottomOf="@id/creator_quiz_tv_page_headline">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +43,7 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/creator_topic_linear_name_wrapper"
+                    android:id="@+id/creator_quiz_linear_name_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/creator_linear_margin_top"
@@ -53,7 +53,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/creator_topic_tv_name"
+                        android:id="@+id/creator_quiz_tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/label_name"
@@ -62,7 +62,7 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/creator_topic_et_name"
+                        android:id="@+id/creator_quiz_et_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/wizard_input_margin_top"
@@ -71,14 +71,14 @@
                         android:ems="10"
                         android:hint="@string/example_name"
                         android:inputType="textMultiLine"
-                        android:labelFor="@id/creator_topic_tv_name"
+                        android:labelFor="@id/creator_quiz_tv_name"
                         android:padding="@dimen/auth_input_padding"
                         android:textColor="?colorOnPrimary"
                         android:textColorHint="@color/light_gray"
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/creator_topic_tv_name_info"
+                        android:id="@+id/creator_quiz_tv_name_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/field_is_required"
@@ -89,17 +89,17 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/creator_topic_linear_desc_wrapper"
+                    android:id="@+id/creator_quiz_linear_desc_wrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/auth_linear_margin_top"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/creator_topic_linear_name_wrapper">
+                    app:layout_constraintTop_toBottomOf="@+id/creator_quiz_linear_name_wrapper">
 
                     <TextView
-                        android:id="@+id/creator_topic_tv_desc"
+                        android:id="@+id/creator_quiz_tv_desc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/label_desc"
@@ -108,7 +108,7 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/creator_topic_et_desc"
+                        android:id="@+id/creator_quiz_et_desc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/wizard_input_margin_top"
@@ -117,72 +117,20 @@
                         android:ems="10"
                         android:hint="@string/example_desc"
                         android:inputType="textMultiLine"
-                        android:labelFor="@id/creator_topic_tv_desc"
+                        android:labelFor="@id/creator_quiz_tv_desc"
                         android:padding="@dimen/wizard_input_padding"
                         android:textColor="?colorOnPrimary"
                         android:textColorHint="@color/light_gray"
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/creator_topic_tv_desc_info"
+                        android:id="@+id/creator_quiz_tv_desc_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/field_is_required"
                         android:textColor="@color/red"
                         android:textSize="@dimen/wizard_tv_info_text_size"
                         android:visibility="gone" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/creator_topic_linear_chb_wrapper"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/auth_linear_margin_top"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/creator_topic_linear_desc_wrapper">
-
-                    <TextView
-                        android:id="@+id/creator_topic_tv_content_check"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/label_content_create_que"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/common__text_h7"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:id="@+id/creator_topic_chb_content_check_wrapper"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/wizard_input_margin_top"
-                        android:background="@drawable/creator_input_bg"
-                        android:gravity="start|center_vertical"
-                        android:clickable="true"
-                        android:foreground="?selectableItemBackground"
-                        android:orientation="horizontal">
-
-                        <CheckBox
-                            android:id="@+id/creator_topic_chb_content_check"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="?colorOnPrimary"
-                            android:textColorHint="@color/light_gray"
-                            android:gravity="center"
-                            android:layout_gravity="center" />
-
-                        <TextView
-                            android:id="@+id/creator_topic_tv_content_check_label"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/label_extended_mode"
-                            android:textColor="?colorOnPrimary"
-                            android:textColorHint="@color/light_gray"
-                            android:textSize="18sp" />
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
