--- a/app/src/main/res/layout/fragment_quizzes.xml
+++ b/app/src/main/res/layout/fragment_quizzes.xml
@@ -17,8 +17,7 @@
         android:paddingVertical="@dimen/common_container_spacing_v"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
